Collapsing product panels are updated with new look

--- a/gisModule/templates/gisModule/shopping.html
+++ b/gisModule/templates/gisModule/shopping.html
@@ -389,7 +389,7 @@
             }
         }
     </script>
-    <title>Project Name</title>
+    <title>Multi-Objective Shopping Route Optimizer</title>
 </head>
 
 <body id="body" style="overflow-y:scroll;">
@@ -406,7 +406,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project Name</a>
+            <a class="navbar-brand" href="#">Multi-Objective Shopping Route Optimizer</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
