--- a/gisModule/templates/gisModule/shop.html
+++ b/gisModule/templates/gisModule/shop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Login | E-Shopper</title>
+    <title>Shop | E-Shopper</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="{% static 'public/css/prettyPhoto.css' %}" rel="stylesheet" >
@@ -17,7 +17,7 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <![endif]-->       
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
@@ -30,7 +30,7 @@
 		<div class="header_top"><!--header_top-->
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-sm-6 ">
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
 								<li><a href=""><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
@@ -91,7 +91,7 @@
 								<li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
 								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-								<li><a href="login.html" class="active"><i class="fa fa-lock"></i> Login</a></li>
+								<li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
 							</ul>
 						</div>
 					</div>
@@ -114,13 +114,13 @@
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
 								<li><a href="index.html">Home</a></li>
-								<li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
+								<li class="dropdown"><a href="#" class="active">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
-                                        <li><a href="shop.html">Products</a></li>
+                                        <li><a href="shop.html" class="active">Products</a></li>
 										<li><a href="product-details.html">Product Details</a></li> 
 										<li><a href="checkout.html">Checkout</a></li> 
 										<li><a href="cart.html">Cart</a></li> 
-										<li><a href="login.html" class="active">Login</a></li> 
+										<li><a href="login.html">Login</a></li> 
                                     </ul>
                                 </li> 
 								<li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
@@ -140,47 +140,42 @@
 						</div>
 					</div>
 				</div>
+				</div>
 			</div>
-		</div><!--/header-bottom-->
-	</header><!--/header-->
+	</header>
 	
-	<section id="form"><!--form-->
+	<section id="advertisement">
+		<div class="container">
+			<img src="images/shop/advertisement.jpg" alt="" />
+		</div>
+	</section>
+	
+	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-4 col-sm-offset-1">
-					<div class="login-form"><!--login form-->
-						<h2>Login to your account</h2>
-						<form id="login_form" method="post">
-							<input name="username" type="text" placeholder="Username" />
-							<input name="password" type="password" placeholder="Password" />
-							<span>
-								<input type="checkbox" class="checkbox"> 
-								Keep me signed in
-							</span>
-							<button id="login_button" onclick="javascript:login();return false;" type="submit" class="btn btn-default">Login</button>
-						</form>
-					</div><!--/login form-->
+				<div class="col-sm-3">
+					<div class="left-sidebar">
+						<h2>Categories</h2>
+						<div class="panel-group category-products" id="categories"><!--category-productsr-->
+						</div><!--/category-productsr-->
+					</div>
 				</div>
-				<div class="col-sm-1">
-					<h2 class="or">OR</h2>
-				</div>
-				<div class="col-sm-4">
-					<div class="signup-form"><!--sign up form-->
-						<h2>New User Signup!</h2>
-						<form id="register_form" method="post">
-                            <input name="first_name" type="text" placeholder="First Name"/>
-                            <input name="last_name" type="text" placeholder="Last Name"/>
-							<input name="username" type="text" placeholder="Username"/>
-							<input name="email" type="email" placeholder="Email Address"/>
-							<input name="password" type="password" placeholder="Password"/>
-							<button id="register_button" onclick="javascript:register();return false;" type="submit" class="btn btn-default">Signup</button>
-						</form>
-					</div><!--/sign up form-->
+				
+				<div class="col-sm-9 padding-right">
+					<div class="features_items"><!--features_items-->
+						<h2 class="title text-center">Products</h2>
+                        <div id="category_products"></div>
+{#						<ul class="pagination">#}
+{#							<li class="active"><a href="">1</a></li>#}
+{#							<li><a href="">2</a></li>#}
+{#							<li><a href="">3</a></li>#}
+{#							<li><a href="">&raquo;</a></li>#}
+{#						</ul>#}
+					</div><!--features_items-->
 				</div>
 			</div>
 		</div>
-	</section><!--/form-->
-	
+	</section>
 	
 	<footer id="footer"><!--Footer-->
 		<div class="footer-top">
@@ -332,7 +327,7 @@
 		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
-					<p class="pull-left">Copyright © 2013 E-SHOPPER Inc. All rights reserved.</p>
+					<p class="pull-left">Copyright © 2013 E-Shopper. All rights reserved.</p>
 					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.themeum.com">Themeum</a></span></p>
 				</div>
 			</div>
@@ -341,13 +336,16 @@
 	</footer><!--/Footer-->
 	
 
-  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="{% static 'public/js/jquery.scrollUp.min.js' %}"></script>
     <script src="{% static 'public/js/price-range.js' %}"></script>
     <script src="{% static 'public/js/jquery.prettyPhoto.js' %}"></script>
     <script src="{% static 'public/js/main.js' %}"></script>
-    <script src="{% static 'login/js/login.js' %}"></script>
+    <script src="{% static 'shop/js/shop.js' %}"></script>
+    <script>
+        var STATIC_URL = "{% static '' %}";
+        traverseProductTree(JSON.parse('{{ category_name_list|safe }}'), JSON.parse('{{ category_id_list|safe }}'), 0, 0); // Fill product information on page
+    </script>
 </body>
 </html>
