--- a/gisModule/templates/gisModule/shop.html
+++ b/gisModule/templates/gisModule/shop.html
@@ -1,329 +1,41 @@
+{% extends "gisModule/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Shop | E-Shopper</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href="{% static 'public/css/prettyPhoto.css' %}" rel="stylesheet">
-    <link href="{% static 'public/css/price-range.css' %}" rel="stylesheet">
-    <link href="{% static 'public/css/animate.css' %}" rel="stylesheet">
-    <link href="{% static 'public/css/main.css' %}" rel="stylesheet">
-    <link href="{% static 'public/css/responsive.css' %}" rel="stylesheet">
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 
-    <script src="https://js.pusher.com/4.0/pusher.min.js"></script>
-    <script>
-        // Enable pusher logging - don't include this in production
-        Pusher.logToConsole = true;
-        var pusher = new Pusher('ea171f7b30a44f1ebf65', {
-            cluster: 'eu',
-            encrypted: true
-        });
-        var user_info = {{ user_info|safe }};
-        var channel = pusher.subscribe('user_' + user_info['userID']); // Subscribe to user's own channel
+{% block title %}Shop{% endblock %}
 
-        channel.bind('product_quantity_change', function (data) {
-            var cart_notification = $('#cart_notification');
-            cart_notification.attr('data-original-title', data['new_changed_by'] + ' changed quantity of ' + data['product_name']).tooltip("toggle");
-            setTimeout(function () {
-                $('#cart_notification').tooltip('hide');
-            }, 2000);
-        });
-
-        channel.bind('product_add', function (data) {
-            var cart_notification = $('#cart_notification');
-            cart_notification.attr('data-original-title', data['product_changed_by'] + ' added a ' + data['product_name'] + " into shopping cart").tooltip("toggle");
-            setTimeout(function () {
-                $('#cart_notification').tooltip('hide');
-            }, 2000);
-        });
-
-        channel.bind('product_remove', function (data) {
-            var cart_notification = $('#cart_notification');
-            cart_notification.attr('data-original-title', data['product_changed_by'] + ' removed ' + data['product_name'] + " from the shopping cart").tooltip("toggle");
-            setTimeout(function () {
-                $('#cart_notification').tooltip('hide');
-            }, 2000);
-        });
-
-        channel.bind('friend_request_received', function (data) {
-            var account_notification = $('#account_notification');
-            account_notification.attr('data-original-title', data['username'] + " sent you a friend request").tooltip("toggle");
-            setTimeout(function () {
-                $('#account_notification').tooltip('hide');
-            }, 2000);
-        });
-
-        channel.bind('friend_request_accepted', function (data) {
-            var account_notification = $('#account_notification');
-            account_notification.attr('data-original-title', data['username'] + " accepted your friend request").tooltip("toggle");
-            setTimeout(function () {
-                $('#account_notification').tooltip('hide');
-            }, 2000);
-        });
-
-        channel.bind('friend_request_denied', function (data) {
-            var account_notification = $('#account_notification');
-            account_notification.attr('data-original-title', data['username'] + " denied your friend request").tooltip("toggle");
-            setTimeout(function () {
-                $('#account_notification').tooltip('hide');
-            }, 2000);
-        });
-
-        channel.bind('removed_from_friendlist', function (data) {
-            var account_notification = $('#account_notification');
-            account_notification.attr('data-original-title', data['username'] + " removed you from his/her friend list").tooltip("toggle");
-            setTimeout(function () {
-                $('#account_notification').tooltip('hide');
-            }, 2000);
-        });
-    </script>
-</head><!--/head-->
-
-<body>
-<header id="header-middle"><!--header-->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Project Name</a>
-            </div>
-            <div style="margin-right: 1%; margin-left: 1%; margin-top: 0.5%" class="nav navbar-right shop-menu">
-                <ul class="nav navbar-nav">
-                    <li><a class="active" href=""><i class="fa fa-adjust"></i> Shop</a></li>
-                    <li id="account_button"><a href=""><i class="fa fa-user"></i> Account</a></li>
-                    {#                            <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>#}
-                    {#                            <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>#}
-                    <li id="cart_notification" data-toggle="tooltip"><a href="cart.html"><i
-                            class="fa fa-shopping-cart"></i> Cart</a></li>
-                    <li><a href=""><i class="fa fa-lock"></i> Logout</a></li>
-                    <div class="search_box pull-right">
-                        <input onchange="search_product(this.value);" type="text" placeholder="Search"/>
-                    </div>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
-
-<section id="advertisement">
-    <div class="container">
-        <img src="images/shop/advertisement.jpg" alt=""/>
-    </div>
-</section>
-
-<section style="margin-top: 70px">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <div class="left-sidebar">
-                    <h2>Categories</h2>
-                    <div class="panel-group category-products" id="categories"><!--category-productsr-->
-                    </div><!--/category-productsr-->
-                </div>
-            </div>
-
-            <div class="col-sm-9 padding-right">
-                <div class="features_items"><!--features_items-->
-                    <h2 class="title text-center">Products</h2>
-                    <div id="category_products"></div>
-                    {#						<ul class="pagination">#}
-                    {#							<li class="active"><a href="">1</a></li>#}
-                    {#							<li><a href="">2</a></li>#}
-                    {#							<li><a href="">3</a></li>#}
-                    {#							<li><a href="">&raquo;</a></li>#}
-                    {#						</ul>#}
-                </div><!--features_items-->
-            </div>
-        </div>
-    </div>
-</section>
-
-<footer id="footer"><!--Footer-->
-    <div class="footer-top">
+{% block content %}
+    <section style="margin-top: 70px">
         <div class="container">
             <div class="row">
-                <div class="col-sm-2">
-                    <div class="companyinfo">
-                        <h2><span>e</span>-shopper</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor</p>
-                    </div>
-                </div>
-                <div class="col-sm-7">
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="#">
-                                <div class="iframe-img">
-                                    <img src="images/home/iframe1.png" alt=""/>
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>Circle of Hands</p>
-                            <h2>24 DEC 2014</h2>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="#">
-                                <div class="iframe-img">
-                                    <img src="images/home/iframe2.png" alt=""/>
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>Circle of Hands</p>
-                            <h2>24 DEC 2014</h2>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="#">
-                                <div class="iframe-img">
-                                    <img src="images/home/iframe3.png" alt=""/>
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>Circle of Hands</p>
-                            <h2>24 DEC 2014</h2>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <div class="video-gallery text-center">
-                            <a href="#">
-                                <div class="iframe-img">
-                                    <img src="images/home/iframe4.png" alt=""/>
-                                </div>
-                                <div class="overlay-icon">
-                                    <i class="fa fa-play-circle-o"></i>
-                                </div>
-                            </a>
-                            <p>Circle of Hands</p>
-                            <h2>24 DEC 2014</h2>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-sm-3">
-                    <div class="address">
-                        <img src="images/home/map.png" alt=""/>
-                        <p>505 S Atlantic Ave Virginia Beach, VA(Virginia)</p>
+                    <div class="left-sidebar">
+                        <h2>Categories</h2>
+                        <div class="panel-group category-products" id="categories"><!--category-productsr-->
+                        </div><!--/category-productsr-->
                     </div>
+                </div>
+
+                <div class="col-sm-9 padding-right">
+                    <div class="features_items"><!--features_items-->
+                        <h2 class="title text-center">Products</h2>
+                        <div id="category_products"></div>
+                        {#						<ul class="pagination">#}
+                        {#							<li class="active"><a href="">1</a></li>#}
+                        {#							<li><a href="">2</a></li>#}
+                        {#							<li><a href="">3</a></li>#}
+                        {#							<li><a href="">&raquo;</a></li>#}
+                        {#						</ul>#}
+                    </div><!--features_items-->
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+{% endblock %}
 
-    <div class="footer-widget">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-2">
-                    <div class="single-widget">
-                        <h2>Service</h2>
-                        <ul class="nav nav-pills nav-stacked">
-                            <li><a href="">Online Help</a></li>
-                            <li><a href="">Contact Us</a></li>
-                            <li><a href="">Order Status</a></li>
-                            <li><a href="">Change Location</a></li>
-                            <li><a href="">FAQ’s</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-                    <div class="single-widget">
-                        <h2>Quock Shop</h2>
-                        <ul class="nav nav-pills nav-stacked">
-                            <li><a href="">T-Shirt</a></li>
-                            <li><a href="">Mens</a></li>
-                            <li><a href="">Womens</a></li>
-                            <li><a href="">Gift Cards</a></li>
-                            <li><a href="">Shoes</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-                    <div class="single-widget">
-                        <h2>Policies</h2>
-                        <ul class="nav nav-pills nav-stacked">
-                            <li><a href="">Terms of Use</a></li>
-                            <li><a href="">Privecy Policy</a></li>
-                            <li><a href="">Refund Policy</a></li>
-                            <li><a href="">Billing System</a></li>
-                            <li><a href="">Ticket System</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-                    <div class="single-widget">
-                        <h2>About Shopper</h2>
-                        <ul class="nav nav-pills nav-stacked">
-                            <li><a href="">Company Information</a></li>
-                            <li><a href="">Careers</a></li>
-                            <li><a href="">Store Location</a></li>
-                            <li><a href="">Affillate Program</a></li>
-                            <li><a href="">Copyright</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-sm-offset-1">
-                    <div class="single-widget">
-                        <h2>About Shopper</h2>
-                        <form action="#" class="searchform">
-                            <input type="text" placeholder="Your email address"/>
-                            <button type="submit" class="btn btn-default"><i class="fa fa-arrow-circle-o-right"></i>
-                            </button>
-                            <p>Get the most recent updates from <br/>our site and be updated your self...</p>
-                        </form>
-                    </div>
-                </div>
+{% block specific_js %}
+    <script src="{% static 'shop/js/shop.js' %}"></script>
+{% endblock %}
 
-            </div>
-        </div>
-    </div>
-
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <p class="pull-left">Copyright © 2017. All rights reserved.</p>
-            </div>
-        </div>
-    </div>
-
-</footer><!--/Footer-->
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="{% static 'public/js/jquery.scrollUp.min.js' %}"></script>
-<script src="{% static 'public/js/price-range.js' %}"></script>
-<script src="{% static 'public/js/jquery.prettyPhoto.js' %}"></script>
-<script src="{% static 'public/js/main.js' %}"></script>
-<script src="{% static 'shop/js/shop.js' %}"></script>
-<script>
-    var STATIC_URL = "{% static '' %}";
-    $('#cart_notification').tooltip({
-        placement: "bottom",
-        trigger: "manual"
-    });
+{% block postscript %}
     traverseProductTree(JSON.parse('{{ category_name_list|safe }}'), JSON.parse('{{ category_id_list|safe }}'), 0, 0); // Fill product information on page
-</script>
-</body>
-</html>
+{% endblock %}
