View Improvements - Added try, except checks for database requests - Changed notification text pass method in javascript files and views code - Changed "UserShoppingList" model as "ShoppingListMember" - Changed field names of "User" model - Various improvements on HTML files

--- a/gisModule/templates/gisModule/account.html
+++ b/gisModule/templates/gisModule/account.html
@@ -3,6 +3,8 @@
 
 {% block title %}Account{% endblock %}
 
+{% block account_active %}active{% endblock %}
+
 {% block content %}
     <section style="margin-top: 70px">
         <div class="container">
