--- a/gisModule/templates/gisModule/shop.html
+++ b/gisModule/templates/gisModule/shop.html
@@ -3,6 +3,14 @@
 
 {% block title %}Shop{% endblock %}
 
+{% block shop_active %}active{% endblock %}
+
+{% block search_box %}
+    <div class="search_box pull-right">
+        <input onchange="search_product(this.value);" type="text" placeholder="Search"/>
+    </div>
+{% endblock %}
+
 {% block content %}
     <section style="margin-top: 70px">
         <div class="container">
@@ -37,5 +45,6 @@
 {% endblock %}
 
 {% block postscript %}
-    traverseProductTree(JSON.parse('{{ category_name_list|safe }}'), JSON.parse('{{ category_id_list|safe }}'), 0, 0); // Fill product information on page
+    traverseProductTree(JSON.parse('{{ category_name_list|safe }}'), JSON.parse('{{ category_id_list|safe }}'), 0, 0);
+    // Fill product information on page
 {% endblock %}
