--- a/gisModule/templates/gisModule/base.html
+++ b/gisModule/templates/gisModule/base.html
@@ -15,6 +15,8 @@
     <link href="{% static 'public/css/animate.css' %}" rel="stylesheet">
     <link href="{% static 'public/css/main.css' %}" rel="stylesheet">
     <link href="{% static 'public/css/responsive.css' %}" rel="stylesheet">
+    <link href="{% static 'public/css/checkbox_onoff.css' %}" rel="stylesheet">
+
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
